# agentfield

./: .gitignore  CHANGELOG.md  README.md  VERSION  arkhe_engine.py  arkhe_manifesto.py  distill_zkAGI.py  hermes_cathedral_bridge.py  verify_zkAGI.py  zkAGI.py  zkAGI_metadata.json
1069-neuronal-communication-channels/: README.md  setup.py  substrate.json
adaptors/: chainer_adaptor.py  coreml_adaptor.py  jax_adaptor.py  onnx_adaptor.py  openvino_adaptor.py  tensorflow_adaptor.py  tensorrt_adaptor.py
arkhe-os/: Cargo.toml  Makefile  README.md
arkhe-os/boot/: bootloader.asm  bootloader.ld  bootloader_arm64.asm
arkhe-os/kernel/src/: axiarchy.rs  ipc.rs  isolation.rs  main.rs  memory.rs  scheduler.rs  syscalls.rs  temporal.rs
arkhe-os/libs/arklib/src/: lib.rs
arkhe-os/libs/ipfs/: Cargo.toml
arkhe-os/libs/ipfs/src/: lib.rs
arkhe-os/libs/nostr/src/: lib.rs
arkhe-os/libs/pqc/src/: lib.rs
arkhe-os/libs/tor/: Cargo.toml
arkhe-os/libs/tor/src/: lib.rs
arkhe-os/servers/bindu/: Cargo.toml
arkhe-os/servers/bindu/src/: main.rs
arkhe-os/servers/net/src/: main.rs
arkhe-os/servers/orchestrator/src/: main.rs
arkhe-os/servers/package/src/: main.rs
arkhe-os/servers/passport/: Cargo.toml
arkhe-os/servers/passport/src/: main.rs
arkhe-os/servers/vfs/src/: main.rs
arkhe-os/tools/arkhe-sh/src/: main.rs
arkhe-os/tools/checkpoint/src/: main.rs
assets/: utm-links.csv
catedral-coreutils/: Makefile  catedral_fs_kernel_1028.2.c
rbb-cathedral-bridge-1042/: Dockerfile.brics  README.md  decree_1042.md
twin-wallet-1047/: decree_1047.md  manifesto.md
(+35 files in other folders)
